Tue Nov 26 13:00:28 1996  David J MacKenzie  <djm@catapult.va.pubnix.com>

	* Version 2.12.

Wed Nov 20 13:00:21 1996  David J MacKenzie  <djm@catapult.va.pubnix.com>

	* Test release 2.11.2.

	* acgeneral.m4 (AC_OUTPUT): Remove a now-wrong test for whether to
	make an unquoted here document.
	(AC_CACHE_SAVE): Double-up backslashes in double quotes.
	From Paul Eggert.

	* Test release 2.11.1.

	* acgeneral.m4 (AC_TRY_COMPILE, AC_TRY_LINK): Make the final
	newline consistent with the other AC_TRY_* macros: no final dnl
	is needed to avoid extraneous blank lines.
	(AC_CHECK_LIB, AC_HAVE_LIBRARY, AC_COMPILE_CHECK): Remove
	extraneous dnl's.
	(AC_DIVERSION_CMDS, AC_DIVERSION_ICMDS): New macros.
	(AC_OUTPUT_COMMANDS, AC_OUTPUT): Use them instead of appending to
	list macros.

	* acgeneral.m4 (AC_CACHE_SAVE): Handle cache variable values
	correctly even if they contain single quote, or are quoted by
	the shell.  From Paul Eggert <eggert@twinsun.com>.
	(AC_INIT_PREPARE): Set LC_MESSAGES to C if set.
	From Hans Olsson <Hans.Olsson@dna.lth.se>.
	Set LC_CTYPE to C if set.
	From tom@vlsivie.tuwien.ac.AT (Thomas Winder).
	* autoconf.sh, autoheader.sh: Likewise set LC_MESSAGES and LC_CTYPE.

Tue Nov 19 10:29:06 1996  David J MacKenzie  <djm@catapult.va.pubnix.com>

	* testsuite/autoconf.g/sizeof.exp: Use the v2 macro name.

	* acgeneral.m4 (AC_OUTPUT_FILES, AC_OUTPUT_HEADER): Support
	creating output files from multiple pieces, concatenated.
	Suggested by "Theodore Ts'o" <tytso@MIT.EDU>.
	(AC_LINK_FILES): If called more than once, concatenate the
	arguments.  From Roland McGrath.
	(AC_CONFIG_SUBDIRS): Likewise.
	(AC_OUTPUT_COMMANDS): New macro.  Suggested by
	Tom Tromey <tromey@creche.cygnus.com>.
	(AC_OUTPUT): Use the lists it sets.

	* acgeneral.m4 (AC_TRY_RUN_NATIVE): Fail if linking fails, like
	AC_TRY_LINK.
	(AC_TRY_RUN): Don't require AC_C_CROSS.
	(AC_TRY_COMPILER): New macro.
	(AC_LANG_C, AC_LANG_CPLUSPLUS): Set cross_compiling.